Fixed hero & footer on mobile.

--- a/static/static/css/partials/footer.css
+++ b/static/static/css/partials/footer.css
@@ -9,6 +9,8 @@
 
 .contact-form {
     width: 400px;
+    max-width: 100%;
+    margin-bottom: 40px;
     display: flex;
     flex-direction: column;
 }
@@ -28,6 +30,7 @@
     resize: none;
     height: 200px !important;
     width: 400px !important;
+    max-width: 100%;
 }
 
 .contact-form-submit {
@@ -58,4 +61,10 @@
     left: 50%;
     transform: translateX(-50%);
     position: absolute;
+}
+
+@media screen and (max-width: 1000px) {
+    .footer {
+        padding: 40px;
+    }
 }
