--- a/static/static/css/partials/hero.css
+++ b/static/static/css/partials/hero.css
@@ -18,3 +18,13 @@
     font-size: 12px;
     margin: 0;
 }
+
+@media screen and (max-width: 1000px) {
+    .title {
+        font-size: 20px;
+    }
+
+    .subtitle {
+        font-size: 9px;
+    }
+}
